--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ krémet, nem fog csalódni!"
       <input type="hidden" name="sid1" value="alex">
       <input type="hidden" name="sid2" value="alex2">
       <input type="hidden" name="sid3" value="alex3">
-      <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+      <input type="hidden" name="redirect_url" value="https://novaskin-cream.github.io/hu/success/index.html">
 
 						</form>
 					</div>
